# sightcall_qa_api

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  clone-and-install  compose.yaml  mypy.ini  pyproject.toml
.cursor/rules/00-architecture/: 0-clean-architecture.mdc  0-feature-based-architecture.mdc
.cursor/rules/01-standards/: 1-clean-code-frontend.mdc
.cursor/rules/02-programming-languages/: 2-php@8.mdc  2-python.mdc  2-typescript-naming-conventions.mdc  2-typescript.mdc
.cursor/rules/03-frameworks-and-libraries/: 3-scss-sass@1.mdc  3-symfony@6.4.mdc  3-vuejs@3.mdc  3-vuex@4.mdc
.cursor/rules/04-tools-and-configurations/: 4-composer.mdc
.cursor/rules/05-workflows-and-processes/: 5-bug-finder.mdc
.cursor/rules/07-quality-assurance/: 7-testing-backend-php.mdc  7-testing-backend-typescript.mdc  7-testing-frontend.mdc  7-testing-standards.mdc  7-tests-integration.mdc  7-tests-units.mdc
.github/workflows/: continuous_delivery.yaml  continuous_integration.yaml  create_github_release.yaml  update_infrastructure.yaml
.windsurf/rules/00-architecture/: 0-clean-architecture.md
.windsurf/rules/02-programming-languages/: 2-python-naming-conventions.md  2-python@3.13.md
.windsurf/rules/03-frameworks-and-libraries/: 3-fastapi.md
.windsurf/rules/04-tools-and-configurations/: 4-dependency-management-python.md
sightcall_qa_api/: __init__.py  config.py
sightcall_qa_api/indexation/application/: haystack_indexer.py  (+1 more)
terraform/: backend.tf  cloud_run.tf  database.tf  locals.tf  main.tf  network.tf  outputs.tf  terraform-key.json.example  terraform.tfbackend  terraform.tfvars.example  terraform_roles.tf  variables.tf  vpc.tf
tests/: test_main.py
(+18 files in other folders)
